# Moshit

./: .gitignore  IMPROVEMENTS.md  README.md  pyproject.toml  run_gui.py
.claude/skills/verify/: SKILL.md
.github/: FUNDING.yml
.github/workflows/: ci.yml
moshit/: __init__.py  audio_bend.py  avi.py  beats.py  cli.py  engine.py  ffmpeg.py  flow.py  presets.py  project.py  waveform.py
moshit/gui/: __init__.py  __main__.py  app.py  controller.py  preview.py  widgets.py
moshit/modes/: __init__.py  _gop.py  base.py  bitrot.py  cdp.py  gop_scramble.py  iframe_pulse.py  iframe_removal.py  loader.py  momentum.py  motion_gain.py  motion_magnify.py  motion_splice.py  motion_weave.py  pframe_drop.py  pframe_duplicate.py  pframe_echo.py  pframe_reverse.py  pframe_shuffle.py  pframe_stutter.py  pingpong.py  pixel.py  raw.py  rgb_iterative_shift.py  rgb_recurse.py  surge.py
tests/: conftest.py  test_audio_bend.py  test_audio_mix.py  test_beats.py  test_cli_params.py  test_composite.py  test_corruption.py  test_finish.py  test_flow.py  test_gop_helpers.py  test_gui.py  test_mask.py  test_mode_automation.py  test_modes_behavioral.py  test_pipeline.py  test_pixel.py  test_precomp.py  test_project.py  test_raw.py  test_selftest.py  test_waveform.py
