[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "moshit"
version = "0.1.0"
description = "Moshit: a standalone, FFmpeg-backed datamoshing engine (no Adobe required)."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
# No third-party Python dependencies for the engine/CLI.
# The GUI needs PySide6 (see the 'gui' optional extra). ffmpeg/ffprobe on PATH
# are required at runtime in all cases.
dependencies = []

[project.optional-dependencies]
gui = ["PySide6>=6.5"]
# Raw-frame effects (pixel sort, RGB recurse/shift, the CDP audio-bend family)
# and motion_magnify need numpy only -- no OpenCV.
raw = ["numpy>=1.21"]
# Optical-flow motion transfer. OpenCV's OpenCL backend runs it on the GPU
# (incl. AMD via Mesa rusticl); CPU fallback otherwise. Also pulls numpy so
# `[flow]` alone still enables the raw effects.
flow = ["opencv-python-headless>=4.6", "numpy>=1.21"]
test = ["pytest>=7"]

[project.scripts]
moshit = "moshit.cli:main"
moshit-gui = "moshit.gui.app:launch"

[tool.setuptools.packages.find]
include = ["moshit*"]        # auto-discover moshit and its subpackages

[tool.pytest.ini_options]
# Run from the repo without an install; integration tests skip without ffmpeg.
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q -ra"
